--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
     "web-vitals": "^2.1.4"
@@ -24,7 +25,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-   
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +47,4 @@
   "devDependencies": {
     "jest": "^27.5.1"
   }
-  
 }
